# terminaleyes

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  SECURITY.md  TICKETS.md  pyproject.toml
config/: terminaleyes.yaml.example
data/ml/longjump/: manifest.json  test.jsonl  train.jsonl  val.jsonl
data/ml/pointer_accel/: manifest.json  test.jsonl  train.jsonl  val.jsonl
docs/: ML_ROADMAP.md
scripts/: bt-agent.py  bt-strip-audio-sdp.sh  build_grounding_dataset.py  build_longjump_dataset.py  build_ml_dataset.py  build_pointer_accel_dataset.py  cc_send_readme_and_diff.py  collect_pointer_accel.sh  deploy_pi.sh  distill_from_rules.py  eval_grounding_mlx.py  eval_ml_planner.py  jiggler.sh  radio_mode.sh  reconnect.sh  retrain_homer.py  setup_bt_hid.sh  setup_usb_gadget.sh  target_bt_reconnect.md  target_bt_reconnect.sh  te-secrets  terminaleyes-pi.service  train_grounding_mlx.py  train_longjump.py  train_ml_planner.py  train_ml_planner_mlx.py  train_pointer_accel.py
src/terminaleyes/: __init__.py  __main__.py  calibration.py  cli.py  mcp_server.py
src/terminaleyes/agent/: __init__.py  base.py  loop.py
src/terminaleyes/agents/: __init__.py  base.py  click.py  context.py  controller.py  cursor.py  dismiss.py  exec_script.py  focus.py  keys.py  launch.py  login.py  ml_planner.py  navigate.py  ocr.py  read.py  save_as.py  scribe.py  script.py  scroll.py  search.py  set_prompt.py  shell_run.py  target.py  type_text.py  vault.py  verify.py  wake.py
src/terminaleyes/capture/: __init__.py  base.py  webcam.py
src/terminaleyes/commandcenter/: __init__.py  factory.py  frame_store.py  log_bus.py  paste_protocol.py  runner.py  server.py
src/terminaleyes/commander/: __init__.py  calibration.py  evaluator.py  (+13 more)
tests/: conftest.py
tests/integration/: test_mouse_scroll_browser.py
(+76 files in other folders)
